--- a/templates/search_detail.html
+++ b/templates/search_detail.html
@@ -25,7 +25,7 @@
 	</nav>
 	<div class="jumbotron">
 		<center>
-			<h1 class="display-4">Organ Donation and Procurement Management System</h1>
+			<h1 class="display-4">UNOS</h1>
 		</center>
 	</div>
 
