--- a/templates/update_detail.html
+++ b/templates/update_detail.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="jumbotron">
         <center>
-            <h1 class="display-4">Organ Procurement and Management System</h1>
+            <h1 class="display-4">UNOS</h1>
         </center>
     </div>
     {% if not_found == True %}
