--- a/templates/add_page.html
+++ b/templates/add_page.html
@@ -18,7 +18,7 @@
             </form>
         </nav>
         <div class="jumbotron">
-            <center><h1 class="display-4">Organ Procurement and Donation Management System</h1></center>
+            <center><h1 class="display-4">UNOS</h1></center>
         </div>
         {% if error == 'True' %}
             ERROR
