--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
 	</nav>
 	<div class="jumbotron">
 		<center>
-			<h1 class="display-4">Organ Donation and Procurement Management System</h1>
+			<h1 class="display-4">UNOS</h1>
 		</center>
 	</div>
 
