--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="jumbotron">
-					<center><h1 class="display-4">Organ Donation and Procurement Management System</h1></center>
+					<center><h1 class="display-4">UNOS</h1></center>
 		</div>
 		<form class="container" action = "/login" method = "POST">
 				<div class="form-group">
