--- a/templates/update_doctor_page.html
+++ b/templates/update_doctor_page.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="jumbotron">
         <center>
-            <h1 class="display-4">Organ Procurement and Management System</h1>
+            <h1 class="display-4">UNOS</h1>
         </center>
     </div>
     <form action="/update_doctor_details" method='POST'>
